# pimpsi_binary

./: DESIGN.md  LICENSE  README.md  pyproject.toml
archived/: LsciFile.py  app.py  app.ui  main.py  mplcanvas.py
src/pimpsi/: __init__.py  __main__.py  cli.py  compute.py  export.py  io.py  measure.py  roi.py  session.py  toi.py
src/pimpsi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pimpsi/gui/: __init__.py  image_view.py  main_window.py  workers.py
tests/: conftest.py  pimsoft_fixtures.py  test_cli.py  test_compute.py  test_export.py  test_gui.py  test_io.py  test_measure.py  test_roi.py  test_session.py
