[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pimpsi"
version = "0.1.0"
description = "Read and analyze PIMSoft PSI binary files."
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[project.scripts]
pimpsi = "pimpsi.cli:main"

[project.optional-dependencies]
gui = [
    "PySide6",
    "imageio",
    "pyqtgraph",
    "tifffile",
]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
